# reactor-frimware

./: .gitmodules  CMakeLists.txt  platformio.ini  readme.md  sdkconfig  sdkconfig.old
html/: index.html
include/: adc.h  button.h  device_id.h  httpserver.h  i2c.h  init_config.h  led.h  mqtt.h  nvs.h  ota.h  ph_service.h  pin_config.h  relay.h  temp_service.h  udp_server.h  version.h  wifi.h
src/: CMakeLists.txt  main.c  ota.c
src/html/: index.html
